refactor(membership): JBCT review round-1 fixes — thread-safety, null-policy, value-object hygiene