@@ -16,8 +16,6 @@
 
 package org.pragmatica.swim;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
 import org.pragmatica.consensus.NodeId;
@@ -35,7 +33,7 @@ import static org.pragmatica.lang.Option.option;
 /// are not reflected in this view.
 public record HealthSnapshot(Map<NodeId, SwimHealth> peerHealth) {
     public HealthSnapshot {
-        peerHealth = Collections.unmodifiableMap(new HashMap<>(peerHealth));
+        peerHealth = peerHealth == null ? Map.of() : Map.copyOf(peerHealth);
     }
 
     public static HealthSnapshot healthSnapshot(Map<NodeId, SwimHealth> peerHealth) {
